# base_OpenGL_renderer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
assets/models/shaderBall/: Attribution.md  material.mtl
include/frontend/: GLFWContext.h  OpenGLDebug.hpp  UI.hpp  arcballController.hpp  camera.h  camera.hpp  framebuffer.hpp  indexBuffer.hpp  loadedObj.hpp  mesh.hpp  shader.hpp  texture.hpp  transform.hpp  vertexBuffer.hpp  vertexLayout.hpp  window.hpp  worldPose.hpp
include/util/: logger.hpp  perf.hpp
shaders/simpleColourOnly/: frag.glsl  vert.glsl
shaders/simpleDiffuseTexturedPhong/: frag.glsl  vert.glsl
shaders/simpleTextureOnly/: frag.glsl  vert.glsl
src/: main.cpp
src/frontend/: loadedObj.cpp  shader.cpp  texture.cpp  window.cpp
src/util/: error.cpp  logger.cpp
